# codeclone

./: .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: chart-lint.yml  ci.yml  security.yml  web.yml
api-keys/: vu3ZY5qxBm.json
api-keys/usage/: 2026-05-31.jsonl
docs/: architecture.md  backends.md  continue-dev.md  faq.md  glossary.md  openapi.yaml  operations.md  recipes.md  reproducibility.md  safety.md  threat-model.md
examples/: README.md  __init__.py  continue_config.jsonc  curl_chat.sh  fim_example.py  node_client.mjs  python_client.py  python_stream.py
infra/docker/: Dockerfile  Dockerfile.cuda  docker-compose.dev.yml  otel-config.yaml
infra/k8s/: README.md  deployment.yaml  kustomization.yaml  service.yaml
infra/terraform/: README.md  main.tf  providers.tf  variables.tf
recipes/: cuda_overnight.yaml  full.yaml  python_only.yaml  quick.yaml  small.yaml  standard.yaml  ts_js_only.yaml
scripts/: daily_retrain.py  docker_smoke.sh  run_sparkline.py  security_scan.sh  smoke_e2e.sh  test.sh
src/codeclone_cli/: __init__.py  main.py
tests/: conftest.py  test_cli.py  test_helm_chart.py  test_security_workflow.py  test_sparkline.py
tests/fixtures/: secrets_corpus.txt
web/: .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json
web/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
web/components/: AccessReviewsEditor.tsx  AddToCollectionButton.tsx  AlignmentMap.tsx  AllowlistEditor.tsx  ApiKeyPolicyEditor.tsx  AutoJoinEditor.tsx  Boundary.tsx  CopyLinkButton.tsx  DatasetsFilterBar.tsx  DiffViewer.tsx  DpaEditor.tsx  DualControlEditor.tsx  EvalFilterBar.tsx  EvalGrid.tsx  EvalPanel.tsx  Headings.tsx  InviteDomainAllowlistEditor.tsx  LegalHoldEditor.tsx  LockdownEditor.tsx  LossChart.tsx  MetricCard.tsx  MetricChip.tsx  MfaPolicyEditor.tsx  ModelsFilterBar.tsx  NavBar.tsx  NotificationBell.tsx  PWAInstall.tsx  PairsFilterBar.tsx  PayloadPolicyEditor.tsx  PlanEditor.tsx  ResidencyEditor.tsx  RetentionEditor.tsx  RunsTable.tsx  ScimEditor.tsx  SecretScanPolicyEditor.tsx  ServeHealth.tsx  SessionPolicyEditor.tsx  SnippetSharePolicyEditor.tsx  SsoEditor.tsx  SsoGroupMappingEditor.tsx  (+10 more)
web/lib/: access-reviews.ts  api-key-policy-enforce.ts  api-keys.ts  api-spec.ts  audit.ts  auth-throttle.ts  auth.ts  batch-samples.ts  batch.ts  collections.ts  compare-samples.ts  dashboard-allowlist-enforce.ts  data.ts  diff.ts  discovery.ts  dpa-enforce.ts  dpa.ts  dry-run.ts  dual-control.ts  format.ts  idempotency.ts  instrument.ts  ip-allowlist-enforce.ts  ip-allowlist.ts  lockdown-enforce.ts  mfa-enforce.ts  mfa-policy-decide.ts  mfa.ts  notifications.ts  observability.ts  og-share.ts  onboarding.ts  openapi.ts  payload-policy-enforce.ts  plans.ts  rate-limit.ts  recent-failures.ts  residency-enforce.ts  scim.ts  scopes.ts  (+16 more)
web/public/: manifest.webmanifest  sw.js
web/scripts/: seed-fixtures.mjs  test-share.mjs  test-similarity.mjs  wire-dashboard-allowlist.mjs
web/styles/: globals.css
web/tests/: access-reviews.test.ts  api-keys-csv.test.ts  api-keys-ip-allowlist.test.ts  api-keys-shortcut.test.ts  api-keys.test.ts  audit-chain.test.ts  audit-json-export.test.ts  audit-shortcut.test.ts  audit-webhook-forward.test.ts  audit.test.ts  auth-throttle.test.ts  auth.test.ts  batch-csv.test.ts  batch-min-score.test.ts  batch.test.ts  collection-detail-json-download.test.ts  collections-csv.test.ts  collections-shortcut.test.ts  collections.test.ts  compare-copy-curl.test.ts  compare-copy-json.test.ts  compare-copy-markdown.test.ts  compare-download-json.test.ts  compare-download-markdown.test.ts  compare-shortcut.test.ts  dashboard-allowlist-enforce.test.ts  datasets-csv.test.ts  datasets-shortcut.test.ts  docs.test.ts  dual-control.test.ts  eval-model-filter.test.ts  eval-shortcut.test.ts  (+135 more)
(+631 files in other folders)
